# parallel-and-distributed-programming

hw1/hw1_cpp/: CMakeLists.txt  main.cpp
hw1/hw1_cpp/dynamic/: dynamic.cpp  dynamic.h
hw1/hw1_cpp/dynamic/dynamic_with_vector/: dynamic_with_vector.cpp  dynamic_with_vector.h
hw1/hw1_cpp/static/: static.cpp  static.h
hw1/hw1_java/: input.txt  settings.gradle
hw2/hw2_cpp/: CMakeLists.txt  main.cpp
hw2/hw2_java/: input.txt  output.out  outputParallel.txt  settings.gradle
hw3/: CMakeLists.txt  main.cpp
hw4/input/: results_c1_p1.txt  results_c1_p10.txt  results_c1_p2.txt  results_c1_p3.txt  results_c1_p4.txt  results_c1_p5.txt  results_c1_p6.txt  results_c1_p7.txt  results_c1_p8.txt  results_c1_p9.txt  results_c2_p1.txt  results_c2_p10.txt  results_c2_p2.txt  results_c2_p3.txt  results_c2_p4.txt  results_c2_p5.txt  results_c2_p6.txt  results_c2_p7.txt  results_c2_p8.txt  results_c2_p9.txt  results_c3_p1.txt  results_c3_p10.txt  results_c3_p2.txt  results_c3_p3.txt  results_c3_p4.txt  results_c3_p5.txt  results_c3_p6.txt  results_c3_p7.txt  results_c3_p8.txt  results_c3_p9.txt  results_c4_p1.txt  results_c4_p10.txt  results_c4_p2.txt  results_c4_p3.txt  results_c4_p4.txt  results_c4_p5.txt  results_c4_p6.txt  results_c4_p7.txt  results_c4_p8.txt  results_c4_p9.txt  (+10 more)
hw4/input_test/: results_c1_p1.txt  results_c1_p2.txt  results_c2_p1.txt  results_c2_p2.txt  results_c2_p3.txt
hw4/output/: ranking_parallel.txt
hw5/input/: results_c1_p3.txt  results_c1_p6.txt  results_c2_p1.txt  results_c2_p2.txt  results_c3_p10.txt  results_c3_p2.txt  (+19 more)
hw6/: settings.gradle
(+76 files in other folders)
